HADR query fix for SQL 2012
is_primary_replica column was added in SQL 2014.

--- a/DBADash/Properties/Resources.resx
+++ b/DBADash/Properties/Resources.resx
@@ -760,15 +760,18 @@ DROP TABLE #FileList</value>
   <data name="SQLDatabasesHADR" xml:space="preserve">
     <value>IF OBJECT_ID('sys.dm_hadr_database_replica_states') IS NOT NULL
 BEGIN
+	DECLARE @SQL NVARCHAR(MAX)
+	SET @SQL =N'
     SELECT database_id,
            group_database_id,
-           is_primary_replica,
+           ' + CASE WHEN @@VERSION LIKE '%SQL Server 2012%' THEN 'CAST(NULL as BIT) AS is_primary_replica,' ELSE 'is_primary_replica,' END + '
            synchronization_state,
            synchronization_health,
            is_suspended,
            suspend_reason
     FROM sys.dm_hadr_database_replica_states
-    WHERE is_local = 1;
+    WHERE is_local = 1;'
+	EXEC sp_executesql @SQL
 END;</value>
   </data>
   <data name="SQLLogRestores" xml:space="preserve">
