--- a/DBADashServiceConfig/ServiceConfig.resx
+++ b/DBADashServiceConfig/ServiceConfig.resx
@@ -120,6 +120,14 @@
   <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="label10.Text" xml:space="preserve">
+    <value>Connections are required to each AzureDB to capture data for monitoring.  You can just add a connection to the master database and check the option to scan for AzureDBs on service start.  Each time the service starts it will look for new databases.
+
+You can also click "Scan Now" to persist any new connections to the config file. </value>
+  </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>172, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
