Refactor + nuget update

--- a/DBADashGUI/Main.resx
+++ b/DBADashGUI/Main.resx
@@ -124,77 +124,77 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABS
-        EAAAAk1TRnQBSQFMAgEBCgEAAfgBCAH4AQgBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xEAAf8C9ATzBfQB/zMA
-        AfQB7wETBBQBEwH3AQkB2wEJAfMB9AH/MQAB9AETAfME9AHzARQB8wOzARkB9CIAAf8B9Av/AfQBAAH0
-        AeoBBwT0AfcBbQEZBLMB9CEAAf8B9AEJCrMB2wP0AfEB6gHwAfQCBwESAfMBuQSzAfQhAAH0AQkBswEZ
-        CP8B9ALbAf8BAAH0AfABbQETAewBkgHwAdsFswH0IQAB/wG5ARkK/wH0AbMB/wEAAfQB2wEZAfMBCQHb
-        AbkGswH0IQAB/wGzC/8BGQGzAf8BAAH0DLMB9CEAAf8BswEZCP8BGQHbAbMBCQH0AQAB9AyzAfQhAAH0
-        AdwB2gH0B/8C2wEZAfQB/wEAAfQMswH0IQAC/wHbAbMBuQGzBP8B9AGzARkB9AH/AgAB9AKzAboBCQHy
-        AvMB8gEJAboCswH0IgAB/wL0ARkB2wHaARkB/wEZAbMB3AH0AwAB/wH0AbMBCQj0AQkBswH0JAAB/wH0
-        Af8B3AOzAdwC/wQAAfQBswEJCPQBCQGzAfQmAAH/AfQD/wH0Af8FAAH0ARkBswG6AQkB8gLzAfIBCQG6
-        AbMBGQH0MgAB/wH0AfMBCQG6BLMBugEJAfMB9AH/NAAB/wj0Af8zAAf0DQAC9BMAAf8F9AH/AQAQ9AET
-        AxQBEwr0BAAC7BMAAfQBCQOzAQkB9AEAAfQNFAL0AxQB9AEUAfQIFAP0ARsB8wJtAfMGGwH0Af8KAAH0
-        BbMB9AEAAfQBFAP0ARQD9AEUA/QBFAP0AZIC9AEUCPQBFAL0AZkBeQEaAm0BGgZ5ARoB9AMAAf8GAAH0
-        BbMB9AEAAfQBFAP0ARQD9AEUA/QBFAH0AQAB9AEUAvQBFAL0BRQB9AEUAvQBeQGZARoCbQEaBnkBmQH0
-        AQAE9AH/BAAB9AGzAdsBCQHbAbMB9AEAAfQNFAH0AQAB8wEUAvQCFAf0ARQC9AF5AfMB8AITAbwBmQZ5
-        ARsC9AGzAYoBCQH0Af8CAAH/AfQB3AP0AdwB9AEAAfQBFAP0ARQD9AEUA/QBFAH0AQAB8wETAxQBEwHw
-        AfQDFAL0ARQC9AGZAe8BEwIUARMB7wGZBXkBGgL0A4oBCQH0Af8CAAH0AQkB3AEJAdwBCQH0AQAB9AEU
-        A/QBFAP0ARQD9AEUAfQBAAH0AQcL9AEUAvQB7wYUAe8BGgR5AZkC9AEJA4oBCQn0Af8BAAH0DRQB9AEA
-        AfQBFAH0BBQB9AIUA/QBFAL0CBQE9AF5AvQB/wH0AQkFigGLAbsB9AH/BQAB9AEUA/QBFAP0ARQD9AEU
-        AfQBAAH0ARQL9AEUDvQBeQL0AQAB/wH0AQkGigG7AfQFAAH0ARQD9AEUA/QBFAP0ARQB9AEAAfQBFAH0
-        BBQG9AEUAvQBeQv0AXkB9AMAAf8B9AGLA4oBiwGKAYsB9AUAAfQNFAH0AQAB9AEUC/QBFAL0AXkG9AEa
-        BHkBmQHzBAAB9AOKAbQB9AGLAYoB9AH/BAAB9A0UAfQBAAH0DRQC9AF5BvQBmQEaBfQEAAH0AYsCigP0
-        AbMB9AUAAfQNFAH0AQAB9A0UAvQBmQZ5AZkE9AH/BQAB9AG7AooBiwT0BQAP9AEAAfQNFAv0CQAB/wH0
-        AbsBiwGKAbMC9AH/FQAP9AEAAf8H9AH/CgAB/wX0Af8FAAj0CQAI9AoAAf8I9AH/EwAB9AYUAfQIAAH0
-        ARkB2wSzAdsBGQH0CAAC9AEJAdsEswHbAQkC9BIAAfQEFAH0ARQB9AgAAfQIswH0CAAB9AG6CLMBugH0
-        AgAP9AEAAfQGFAH0CAAB9AizB/QCAAH0CrMB9AIAAfQBmQt5AZkB9AEAAfQGFAj0AQAB9AizAfQFFAH0
-        AgAB9AqzAfQCAAH0DXkB9AEAAfQGFAH0AdsEswHbARkC9AizAfQDFAH0ARQB9AIAAfQKswH0AgAB9A15
-        AfQBAAH0ARQE9AEUAfQHswL0CLMB9AUUAfQCAAH0CrMB9AIAAfQNeQH0AQAB9AYUAfQHswL0A7MCugOz
-        AfQFFAH0AgAB9AqzAfQCAAH0DXkB9AEAAfQBFAT0ARQB9AezAvQBswEJBPQBCQGzAfQFFAH0AgAB9Aqz
-        AfQCAAH0DXkB9AEAAfQGFAH0B7MC9AGzAQkE9AEJAbMB9AUUAfQCAAH0CrMB9AIAAfQNeQH0AQAI9Aez
-        AvQBGQHbAbMCugGzAdsB8AH0BRQB9AIAAfQKswH0AgAB9A15AfQHAAH0A7MCugOzAfQBAA30ARQB9AIA
-        AfQDswTbA7MB9AIAAfQMeQGZAfQHAAH0AbMBCQT0AQkBswH0BwAB9AcUAfQCAAH0AbMBCQb0AQkBswH0
-        AgAB9AF5BvQBGgGZBfQHAAH0AbMBCQT0AQkBswH0BwAB9AEUBfQBFAH0AgAB9AG6AbkBCQEZAvMBGQEJ
-        AbkBugH0AgAB9AGZB3kBGwH0CwAB9AEZAdsBswK6AbMB2wEZAfQHAAH0BxQB9AIAAvQBCQHbBLMB2wEJ
-        AvQCAAr0Af8MAAj0CAAJ9AMAAf8I9AH/EwABQgFNAT4HAAE+AwABKAMAAUADAAEwAwABAQEAAQEFAAGA
-        AQEWAAP/AQAC/wEAAQcEAAL/AQABAQQAAv8BAAEBBAABgAEBAQABAQcAAQEGAAGAAQEGAAGAAQEGAAGA
-        AQEGAAGAAQEGAAGAAQEFAAEBAYABAQQAAYABBwEAAQEEAAHgAQcBgAEBBAAB+AEPAYABAQQAAv8BgAEB
-        BAAC/wHgAQcEAAL/AQEB/wHzAv8CgAMAAfMC/wKABAABAQH/AoAEAAEBAd8CgAEAAYACAAEBAQcCgAEA
-        AYADAAEDAQABgAEAAYADAAEBAoABAAGABQABgAEAAYAEAAEPAYABAAGAAwABgAEPAYABAAGAAgABAQHA
-        AQ8BgAEAAYACAAEBAeABBwGAAQABgAIAAQEB4AEPAYABAAGAAgABAwHgAQ8BgAEAAYACAAE/AeABDwL/
-        AYABAAGAAT8B8AEfAQAB/wGAAX8B4AEHAv8BAAH/AQABPwHAAQMC/wEAAf8BAAE/AcABAwEAAQEBAAH/
-        AgABwAEDAQABAQEAAQECAAHAAQMBAAEBBAABwAEDAQABAQQAAcABAwEAAQEEAAHAAQMBAAEBBAABwAED
-        AQABAQQAAcABAwEAAQEEAAHAAQMBAAEBAfwBAAGAAQABwAEDAQABAQH8AQAB/gEAAcABAwEAAQEB/AEA
-        Af4BAAHAAQMBAAEfAfwBAAH+AQABwAEDAQABHwH+AQEB/gEAAeABBwL/Cw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABQ
+        EAAAAk1TRnQBSQFMAgEBCgIAAQkBAAEJARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        AUADAAEwAwABAQEAAQgGAAEMGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
+        AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
+        AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
+        AwABmQMAAcwCAAEzAwACMwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZ
+        AgABZgHMAgABZgH/AgABmQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFm
+        AgABzAGZAgACzAIAAcwB/wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEz
+        AQABmQEAATMBAAHMAQABMwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFm
+        AgABMwFmATMBAAEzAmYBAAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFm
+        AQABMwKZAQABMwGZAcwBAAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEA
+        ATMBzAH/AQABMwH/ATMBAAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFm
+        AQABZgEAAWYBAAGZAQABZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFm
+        ATMBzAEAAWYBMwH/AQACZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFm
+        AQABZgKZAQABZgGZAcwBAAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEA
+        AWYB/wIAAWYB/wEzAQABZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZ
+        AQABmQEAAZkBAAHMAQABmQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEz
+        AQABmQEzAWYBAAGZAWYBmQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/
+        AQABmQHMAgABmQHMATMBAAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEA
+        AZkBzAFmAQABmQH/AZkBAAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHM
+        AQABzAEAAZkBMwIAAcwCMwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFm
+        ATMBAAGZAmYBAAHMAWYBmQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZ
+        AQABzAGZAcwBAAHMAZkB/wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/
+        ATMBAAGZAf8BZgEAAcwB/wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHM
+        ATMCAAH/AjMBAAH/ATMBZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJm
+        AQAB/wFmAZkBAAH/AWYBzAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHM
+        AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
+        AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
+        ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
+        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8RAAH/AvQE8wX0Af8zAAH0
+        Ae8BEwQUARMB9wEJAdsBCQHzAfQB/zEAAfQBEwHzBPQB8wEUAfMDswEZAfQiAAH/AfQL/wH0AQAB9AHq
+        AQcE9AH3AW0BGQSzAfQhAAH/AfQBCQqzAdsD9AHxAeoB8AH0AgcBEgHzAbkEswH0IQAB9AEJAbMBGQj/
+        AfQC2wH/AQAB9AHwAW0BEwHsAZIB8AHbBbMB9CEAAf8BuQEZCv8B9AGzAf8BAAH0AdsBGQHzAQkB2wG5
+        BrMB9CEAAf8Bswv/ARkBswH/AQAB9AyzAfQhAAH/AbMBGQj/ARkB2wGzAQkB9AEAAfQMswH0IQAB9AHc
+        AdoB9Af/AtsBGQH0Af8BAAH0DLMB9CEAAv8B2wGzAbkBswT/AfQBswEZAfQB/wIAAfQCswG6AQkB8gLz
+        AfIBCQG6ArMB9CIAAf8C9AEZAdsB2gEZAf8BGQGzAdwB9AMAAf8B9AGzAQkI9AEJAbMB9CQAAf8B9AH/
+        AdwDswHcAv8EAAH0AbMBCQj0AQkBswH0JgAB/wH0A/8B9AH/BQAB9AEZAbMBugEJAfIC8wHyAQkBugGz
+        ARkB9DIAAf8B9AHzAQkBugSzAboBCQHzAfQB/zQAAf8I9AH/MwAH9A0AAvQTAAH/BfQB/wEAEPQBEwMU
+        ARMK9AQAAuwTAAH0AQkDswEJAfQBAAH0DRQC9AMUAfQBFAH0CBQD9AEbAfMCbQHzBhsB9AH/CgAB9AWz
+        AfQBAAH0ARQD9AEUA/QBFAP0ARQD9AGSAvQBFAj0ARQC9AGZAXkBGgJtARoGeQEaAfQDAAH/BgAB9AWz
+        AfQBAAH0ARQD9AEUA/QBFAP0ARQB9AEAAfQBFAL0ARQC9AUUAfQBFAL0AXkBmQEaAm0BGgZ5AZkB9AEA
+        BPQB/wQAAfQBswHbAQkB2wGzAfQBAAH0DRQB9AEAAfMBFAL0AhQH9AEUAvQBeQHzAfACEwG8AZkGeQEb
+        AvQBswGKAQkB9AH/AgAB/wH0AdwD9AHcAfQBAAH0ARQD9AEUA/QBFAP0ARQB9AEAAfMBEwMUARMB8AH0
+        AxQC9AEUAvQBmQHvARMCFAETAe8BmQV5ARoC9AOKAQkB9AH/AgAB9AEJAdwBCQHcAQkB9AEAAfQBFAP0
+        ARQD9AEUA/QBFAH0AQAB9AEHC/QBFAL0Ae8GFAHvARoEeQGZAvQBCQOKAQkJ9AH/AQAB9A0UAfQBAAH0
+        ARQB9AQUAfQCFAP0ARQC9AgUBPQBeQL0Af8B9AEJBYoBiwG7AfQB/wUAAfQBFAP0ARQD9AEUA/QBFAH0
+        AQAB9AEUC/QBFA70AXkC9AEAAf8B9AEJBooBuwH0BQAB9AEUA/QBFAP0ARQD9AEUAfQBAAH0ARQB9AQU
+        BvQBFAL0AXkL9AF5AfQDAAH/AfQBiwOKAYsBigGLAfQFAAH0DRQB9AEAAfQBFAv0ARQC9AF5BvQBGgR5
+        AZkB8wQAAfQDigG0AfQBiwGKAfQB/wQAAfQNFAH0AQAB9A0UAvQBeQb0AZkBGgX0BAAB9AGLAooD9AGz
+        AfQFAAH0DRQB9AEAAfQNFAL0AZkGeQGZBPQB/wUAAfQBuwKKAYsE9AUAD/QBAAH0DRQL9AkAAf8B9AG7
+        AYsBigGzAvQB/xUAD/QBAAH/B/QB/woAAf8F9AH/BQAI9AkACPQKAAH/CPQB/xMAAfQGFAH0CAAB9AEZ
+        AdsEswHbARkB9AgAAvQBCQHbBLMB2wEJAvQSAAH0BBQB9AEUAfQIAAH0CLMB9AgAAfQBugizAboB9AIA
+        D/QBAAH0BhQB9AgAAfQIswf0AgAB9AqzAfQCAAH0AZkLeQGZAfQBAAH0BhQI9AEAAfQIswH0BRQB9AIA
+        AfQKswH0AgAB9A15AfQBAAH0BhQB9AHbBLMB2wEZAvQIswH0AxQB9AEUAfQCAAH0CrMB9AIAAfQNeQH0
+        AQAB9AEUBPQBFAH0B7MC9AizAfQFFAH0AgAB9AqzAfQCAAH0DXkB9AEAAfQGFAH0B7MC9AOzAroDswH0
+        BRQB9AIAAfQKswH0AgAB9A15AfQBAAH0ARQE9AEUAfQHswL0AbMBCQT0AQkBswH0BRQB9AIAAfQKswH0
+        AgAB9A15AfQBAAH0BhQB9AezAvQBswEJBPQBCQGzAfQFFAH0AgAB9AqzAfQCAAH0DXkB9AEACPQHswL0
+        ARkB2wGzAroBswHbAfAB9AUUAfQCAAH0CrMB9AIAAfQNeQH0BwAB9AOzAroDswH0AQAN9AEUAfQCAAH0
+        A7ME2wOzAfQCAAH0DHkBmQH0BwAB9AGzAQkE9AEJAbMB9AcAAfQHFAH0AgAB9AGzAQkG9AEJAbMB9AIA
+        AfQBeQb0ARoBmQX0BwAB9AGzAQkE9AEJAbMB9AcAAfQBFAX0ARQB9AIAAfQBugG5AQkBGQLzARkBCQG5
+        AboB9AIAAfQBmQd5ARsB9AsAAfQBGQHbAbMCugGzAdsBGQH0BwAB9AcUAfQCAAL0AQkB2wSzAdsBCQL0
+        AgAK9AH/DAAI9AgACfQDAAH/CPQB/xMAAUIBTQE+BwABPgMAASgDAAFAAwABMAMAAQEBAAEBBQABgAEB
+        FgAD/wEAAv8BAAEHBAAC/wEAAQEEAAL/AQABAQQAAYABAQEAAQEHAAEBBgABgAEBBgABgAEBBgABgAEB
+        BgABgAEBBgABgAEBBQABAQGAAQEEAAGAAQcBAAEBBAAB4AEHAYABAQQAAfgBDwGAAQEEAAL/AYABAQQA
+        Av8B4AEHBAAC/wEBAf8B8wL/AoADAAHzAv8CgAQAAQEB/wKABAABAQHfAoABAAGAAgABAQEHAoABAAGA
+        AwABAwEAAYABAAGAAwABAQKAAQABgAUAAYABAAGABAABDwGAAQABgAMAAYABDwGAAQABgAIAAQEBwAEP
+        AYABAAGAAgABAQHgAQcBgAEAAYACAAEBAeABDwGAAQABgAIAAQMB4AEPAYABAAGAAgABPwHgAQ8C/wGA
+        AQABgAE/AfABHwEAAf8BgAF/AeABBwL/AQAB/wEAAT8BwAEDAv8BAAH/AQABPwHAAQMBAAEBAQAB/wIA
+        AcABAwEAAQEBAAEBAgABwAEDAQABAQQAAcABAwEAAQEEAAHAAQMBAAEBBAABwAEDAQABAQQAAcABAwEA
+        AQEEAAHAAQMBAAEBBAABwAEDAQABAQH8AQABgAEAAcABAwEAAQEB/AEAAf4BAAHAAQMBAAEBAfwBAAH+
+        AQABwAEDAQABHwH8AQAB/gEAAcABAwEAAR8B/gEBAf4BAAHgAQcC/ws=
 </value>
   </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -239,7 +239,7 @@
   <metadata name="DaysSinceValidation.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="Created.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="colCreated.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="Modified.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
