--- a/DBADash/Properties/Resources.resx
+++ b/DBADash/Properties/Resources.resx
@@ -1870,7 +1870,16 @@ BEGIN
 END</value>
   </data>
   <data name="SQLPerformanceCounters" xml:space="preserve">
-    <value>SELECT SYSUTCDATETIME() AS SnapshotDate,
+    <value>DECLARE @counters TABLE(
+	object_name NCHAR(128) NOT NULL,
+	counter_name NVARCHAR(128) NOT NULL,
+	instance_name NCHAR(128) NULL
+)
+INSERT INTO @counters(object_name,counter_name,instance_name)
+SELECT ctrs.c.value('@object_name','NCHAR(128)'),ctrs.c.value('@counter_name','NCHAR(128)') ,ctrs.c.value('@instance_name','NCHAR(128)') 
+FROM @CountersXML.nodes('Counters/Counter') ctrs(c)
+
+SELECT SYSUTCDATETIME() AS SnapshotDate,
 		STUFF(pc.object_name,1,CHARINDEX(':',pc.object_name),'') AS object_name,
        pc.counter_name,
        pc.instance_name,
