--- a/DBADash/Properties/Resources.resx
+++ b/DBADash/Properties/Resources.resx
@@ -1887,10 +1887,10 @@ SELECT SYSUTCDATETIME() AS SnapshotDate,
        pc.cntr_type 
 FROM sys.dm_os_performance_counters pc
 WHERE EXISTS(SELECT 1 
-FROM @CountersXML.nodes('Counters/Counter') ctrs(c)
-WHERE ctrs.c.value('@object_name','NCHAR(128)') = STUFF(pc.object_name,1,CHARINDEX(':',pc.object_name),'')
-AND ctrs.c.value('@counter_name','NCHAR(128)') = pc.counter_name
-AND (ctrs.c.value('@instance_name','NCHAR(128)') = pc.instance_name OR ctrs.c.value('@instance_name','NCHAR(128)') IS NULL)
+FROM @counters c
+WHERE c.object_name = STUFF(pc.object_name,1,CHARINDEX(':',pc.object_name),'')
+AND c.counter_name = pc.counter_name
+AND (c.instance_name = pc.instance_name OR c.instance_name IS NULL)
 )
 AND pc.instance_name NOT IN('AuditingGroup',
 'AutoShrinkLogGroup',
