--- a/DBADash/Properties/Resources.resx
+++ b/DBADash/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="SQLCustomChecks" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SQL\SQLCustomChecks.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="SQLDatabaseMirroring" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\SQL\SQLDatabaseMirroring.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="SQLDatabasePermissions" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SQL\SQLDatabasePermissions.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
