Add support for monitoring Linux SQL instances
Collect info to detect if we are running on Linux.  Disable WMI collection and drive collection under Linux.  Fix issue with CPU usage on Linux (System idle is 0 so unable to detect CPU usage by other processes).

--- a/DBADash/Properties/Resources.resx
+++ b/DBADash/Properties/Resources.resx
@@ -178,6 +178,9 @@
   <data name="SQLDrives" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SQL\SQLDrives.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="SQLInstance" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\SQL\SQLInstance.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="SQLIOStats" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SQL\SQLIOStats.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
