--- a/DBADashServiceConfig/ServiceConfig.resx
+++ b/DBADashServiceConfig/ServiceConfig.resx
@@ -176,6 +176,9 @@
         Mv0AE/39AAP9/cAALlbAAPX9/gD9/f4A/f3+ADYy/4MyVv+D/f3///39
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>172, 17</value>
+  </metadata>
   <data name="label10.Text" xml:space="preserve">
     <value>Connections are required to each AzureDB to capture data for monitoring.  Alternativley, add a connection to the master database and check the option to scan for AzureDBs on service start and/or check the option to scan for new Azure DBs every 'X' seconds.
 
