--- a/DBADash/Properties/Resources.resx
+++ b/DBADash/Properties/Resources.resx
@@ -184,6 +184,9 @@
   <data name="SQLIOStats" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SQL\SQLIOStats.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="SQLJobHistory" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\SQL\SQLJobHistory.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="SQLLastGoodCheckDB" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SQL\SQLLastGoodCheckDB.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
